--- a/app/src/main/res/layout/activity_barcode.xml
+++ b/app/src/main/res/layout/activity_barcode.xml
@@ -8,6 +8,8 @@
         <variable
             name="vm"
             type="kr.hs.dgsw.jobdongsani_android.viewmodel.BarcodeViewModel" />
+
+        <import type="android.view.View" />
     </data>
 
     <FrameLayout
@@ -144,6 +146,12 @@
 
         </LinearLayout>
 
-
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:progressBackgroundTint="@color/progressBackground"
+            android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}" />
     </FrameLayout>
 </layout>
