--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,9 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="kr.hs.dgsw.jobdongsani_android.viewmodel.SignUpViewModel" />
+
+        <import type="android.view.View" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,11 +22,11 @@
             android:id="@+id/btn_image"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            app:civ_border="true"
-            app:civ_border_width="1dp"
-            app:civ_border_color="@color/main"
             android:layout_marginBottom="80dp"
             android:src="@drawable/ic_icon_add_image"
+            app:civ_border="true"
+            app:civ_border_color="@color/main"
+            app:civ_border_width="1dp"
             app:layout_constraintBottom_toTopOf="@id/input_layout_nickname"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,8 +50,8 @@
                 android:hint="Username"
                 android:imeOptions="flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                 android:inputType="text"
-                android:text="@={vm.nickName}"
                 android:privateImeOptions="nm"
+                android:text="@={vm.nickName}"
                 android:textSize="13sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -68,10 +71,10 @@
                 android:layout_height="match_parent"
                 android:backgroundTint="@android:color/transparent"
                 android:hint="Password"
-                android:text="@={vm.password}"
                 android:imeOptions="flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                 android:inputType="textPassword"
                 android:privateImeOptions="nm"
+                android:text="@={vm.password}"
                 android:textSize="13sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -88,12 +91,12 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="text"
                 android:backgroundTint="@android:color/transparent"
-                android:text="@={vm.phone}"
                 android:hint="Phone"
                 android:imeOptions="flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
+                android:inputType="text"
                 android:privateImeOptions="nm"
+                android:text="@={vm.phone}"
                 android:textSize="13sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -111,11 +114,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="@android:color/transparent"
-                android:inputType="text"
-                android:text="@={vm.name}"
                 android:hint="Name"
                 android:imeOptions="flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
+                android:inputType="text"
                 android:privateImeOptions="nm"
+                android:text="@={vm.name}"
                 android:textSize="13sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -125,8 +128,8 @@
             android:layout_height="60dp"
             android:backgroundTint="@color/main"
             android:fontFamily="@font/noto_sans_light"
-            android:text="@string/join"
             android:onClick="@{()->vm.register()}"
+            android:text="@string/join"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/input_layout_email" />
@@ -141,6 +144,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:progressBackgroundTint="@color/progressBackground"
+            android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
