--- a/app/src/main/res/layout/dialog_pick_waste_type.xml
+++ b/app/src/main/res/layout/dialog_pick_waste_type.xml
@@ -5,38 +5,51 @@
 
     <data>
 
+        <variable
+            name="vm"
+            type="kr.hs.dgsw.jobdongsani_android.viewmodel.PickWasteTypeViewModel" />
+
+        <import type="android.view.View" />
     </data>
 
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:layout_width="300dp"
-                android:layout_height="500dp"
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="500dp"
+            android:background="@drawable/background_dialog_card"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/noto_sans_medium"
+                android:text="상품을 등록해주세요"
+                android:textColor="@color/textColor"
+                android:textSize="20sp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_waste_type"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:orientation="vertical"
-                android:background="@drawable/background_dialog_card"
-                android:paddingHorizontal="10dp">
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_waste_type" />
 
-                <TextView
-                    android:id="@+id/tv_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/noto_sans_medium"
-                    android:text="상품을 등록해주세요"
-                    android:textColor="@color/textColor"
-                    android:textSize="20sp" />
+        </LinearLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_waste_type"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/item_waste_type" />
-
-            </LinearLayout>
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:progressBackgroundTint="@color/progressBackground"
+            android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}" />
 
     </FrameLayout>
 </layout>
