--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,6 +7,9 @@
         <variable
             name="vm"
             type="kr.hs.dgsw.jobdongsani_android.viewmodel.SearchViewModel" />
+
+        <import type="android.view.View"/>
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -86,6 +89,18 @@
             tools:itemCount="10"
             tools:listitem="@layout/item_search_post"
             app:layout_constraintTop_toBottomOf="@id/line" />
+
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
+            android:progressBackgroundTint="@color/progressBackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
