--- a/app/src/main/res/layout/fragment_write_post.xml
+++ b/app/src/main/res/layout/fragment_write_post.xml
@@ -8,6 +8,8 @@
         <variable
             name="vm"
             type="kr.hs.dgsw.jobdongsani_android.viewmodel.WritePostViewModel" />
+
+        <import type="android.view.View" />
     </data>
 
     <ScrollView
@@ -75,12 +77,12 @@
 
             <ImageView
                 android:id="@+id/iv_thumnail"
-                android:visibility="gone"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
+                android:layout_marginVertical="10dp"
                 android:scaleType="centerCrop"
-                android:layout_marginVertical="10dp"/>
+                android:visibility="gone" />
 
             <View
                 android:id="@+id/view3"
@@ -167,13 +169,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="bottom"
-                android:layout_marginTop="150dp"
                 android:backgroundTint="@color/main"
                 android:fontFamily="@font/noto_sans_medium"
                 android:includeFontPadding="false"
                 android:onClick="@{()->vm.onClickWritePost()}"
                 android:text="게시글 작성"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:visibility="@{vm.isLoading ? View.GONE : View.VISIBLE}" />
+
+            <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:progressBackgroundTint="@color/progressBackground"
+                android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
 
         </LinearLayout>
     </ScrollView>
